<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="app_settings_menu_name">Настройки</string>
    <string name="app_settings_dark_theme">Темная тема</string>
    <string name="app_settings_share_app">Поделиться приложением</string>
    <string name="app_settings_contact_support">Написать в поддержку</string>
    <string name="app_settings_licence_agreement">Пользовательское соглашение</string>
    <string name="app_search_menu_name">Поиск</string>
    <string name="app_search_hint">Поиск</string>
    <string name="settings_extra_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_extra_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_course_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="license_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="settings_contact_email">mail@namerpro.me</string>
    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_nointernet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_update">Обновить</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="search_history_title">Вы искали</string>
    <string name="audio_album_string">Альбом</string>
    <string name="audio_duration_string">Длительность</string>
    <string name="audio_year_string">Год</string>
    <string name="audio_genre_string">Жанр</string>
    <string name="audio_country_string">Страна</string>
    <string name="audio_add_to_favourites">Добавить в избранное</string>
    <string name="audio_add_to_playlist">Добавить в плейлист</string>
    <string name="media_no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="media_no_favourite_tracks">Ваша медиатека пуста</string>
    <string name="media_add_new_playlist">Новый плейлист</string>
    <string name="app_media_menu_name">Медиатека</string>
    <string name="media_favourite_tracks">Избранные треки</string>
    <string name="media_playlists">Плейлисты</string>
    <string name="bottom_navigation_search">Поиск</string>
    <string name="bottom_navigation_media">Медиатека</string>
    <string name="bottom_navigation_settings">Настройки</string>
    <string name="new_playlist_fragment_title">Новый плейлист</string>
    <string name="new_playlist_playlist_title">Название*</string>
    <string name="new_playlist_playlist_description">Описание</string>
    <string name="new_playlist_create_playlist_button_text">Создать</string>
    <plurals name="playlist_item_track_word">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <string name="new_playlist_create_playlist_was_successfully_created">Плейлист %1$s создан</string>
    <string name="new_playlist_create_playlist_failed_to_create">Добавление невозможно!\nПлейлист с таким заголовком уже существует</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="add_to_playlist_button_create_playlist_text">Новый плейлист</string>
    <string name="add_to_playlist_successfully_added_track">Добавлено в плейлист %1$s</string>
    <string name="add_to_playlist_failed_due_to_already_exists">Трек уже добавлен в плейлист %1s</string>
    <plurals name="playlist_playlist_information_time">
        <item quantity="zero">%1$d минут •</item>
        <item quantity="one">%1$d минута •</item>
        <item quantity="two">%1$d минуты •</item>
        <item quantity="few">%1$d минуты •</item>
        <item quantity="many">%1$d минут •</item>
        <item quantity="other">%1$d минут •</item>
    </plurals>
    <plurals name="playlist_playlist_information_tracks_count">
        <item quantity="zero">\u0020%1$d треков</item>
        <item quantity="one">\u0020%1$d трек</item>
        <item quantity="two">\u0020%1$d трека</item>
        <item quantity="few">\u0020%1$d трека</item>
        <item quantity="many">\u0020%1$d треков</item>
        <item quantity="other">\u0020%1$d треков</item>
    </plurals>
    <string name="playlist_no_tracks_in_playlist_info">В этом плейлисте пока нет треков!\nДобавьте треки в плейлист и они появятся здесь</string>
    <string name="playlist_delete_playlist_from_list">Хотите удалить трек?</string>
    <string name="dialog_yes_button">Да</string>
    <string name="dialog_no_button">Нет</string>
    <string name="no_tracks_in_playlist_to_share_button">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="dialog_ok_button">Ок</string>
    <string name="dialog_finish_playlist_create_title">Завершить создание плейлиста?</string>
    <string name="dialog_finish_playlist_create_warning">Все несохраненные данные будут удалены.</string>
    <string name="dialog_cancel_button">Отмена</string>
    <string name="dialog_finish_button">Завершить</string>
    <string name="playlist_share_playlist_title">Плейлист</string>
    <string name="playlist_share_playlist_description">Описание</string>
    <string name="playlist_share_subject">Плейлист %1$s | Поделиться</string>
    <string name="playlist_share_empty_playlist_title">Плейлист пустой</string>
    <string name="playlist_extra_settings_share_playlist">Поделиться</string>
    <string name="playlist_extra_settings_edit_playlist">Редактировать информацию</string>
    <string name="playlist_extra_settings_delete_playlist">Удалить плейлист</string>
    <string name="playlist_extra_settings_playlist_delete_confirmation">Хотите удалить плейлист «%1$s»?</string>
    <string name="playlist_create_playlist_edit">Редактировать</string>
    <string name="new_playlist_edit_playlist_button_text">Сохранить</string>
    <string name="edit_playlist_edit_failed_because_another_playlist_with_same_name_exists">Невозможно сохранить изменения!\nУказанный заголовок плейлиста не является уникальным</string>
    <string name="playlist_delete_playlist_alert_title">Вы уверены, что хотите удалить этот плейлист?</string>
</resources>