<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.namerpro.playlistmaker.settings.ui.fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_settings_menu_name"
                style="@style/activity_top_text"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/toggle_day_night_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_settings_dark_theme"
                style="@style/switch_appearence"/>

            <TextView
                android:id="@+id/settings_share_app_button"
                android:text="@string/app_settings_share_app"
                app:drawableEndCompat="@drawable/ic_settings_share"
                style="@style/settings_buttons_style"/>

            <TextView
                android:id="@+id/settings_contact_support_button"
                android:text="@string/app_settings_contact_support"
                app:drawableEndCompat="@drawable/ic_settings_support"
                style="@style/settings_buttons_style"/>

            <TextView
                android:id="@+id/settings_license_agreement"
                android:text="@string/app_settings_licence_agreement"
                app:drawableEndCompat="@drawable/ic_settings_licence_argeement"
                style="@style/settings_buttons_style"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>