<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="1dp"
        android:layout_marginBottom="28dp">


        <Button
            android:id="@+id/main_activity_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/search_button"
            android:textAllCaps="false"
            android:textColor="@color/app_black"
            android:textSize="@dimen/medium_text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/app_black" />

        <Button
            android:id="@+id/main_activity_media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/media_button"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/app_black"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/medium_text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/app_black"/>

        <Button
            android:id="@+id/main_activity_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/settings_button"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="@color/app_black"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/medium_text_size"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/app_black"/>


    </LinearLayout>

</LinearLayout>