<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/search_back"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            style="@style/activity_back_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_search_menu_name"
            style="@style/activity_top_text"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp">

        <EditText
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:id="@+id/search_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/app_search_hint"
            android:maxLines="1"
            android:paddingLeft="13dp"
            android:paddingVertical="8.5dp"
            android:textIsSelectable="false"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_regular"
            android:drawablePadding="9dp"
            style="@style/edit_text_theme"/>

        <ImageView
            android:id="@+id/search_clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="12dp"
            android:layout_marginRight="14dp"
            android:background="@color/transparent"
            android:visibility="gone"
            style="@style/clear_button"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/nothing_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_settings_exceptions_margin"
        android:visibility="gone">

        <TextView
            android:text="@string/search_nothing_found"
            android:drawableTop="@drawable/ic_search_nothing_found"
            style="@style/search_exception"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/nointernet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/app_settings_exceptions_margin"
        android:visibility="gone">

        <TextView
            android:text="@string/search_nointernet"
            android:drawableTop="@drawable/ic_search_nointernet"
            android:maxWidth="312dp"
            style="@style/search_exception"/>

        <Button
            android:id="@+id/search_update_content"
            app:cornerRadius="54dp"
            android:layout_marginTop="24sp"
            android:fontFamily="@font/ys_display_medium"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:text="@string/search_update"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/search_reconnect_button_style"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_view"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone"/>

</LinearLayout>