<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="ru.namerpro.playlistmaker.media.ui.fragments.playlist.CreatePlaylistFragment"
    style="@style/standard_fragment_style">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/new_playlist_back"
                android:layout_marginTop="@dimen/back_button_padding"
                android:layout_marginStart="@dimen/back_button_padding"
                android:layout_width="@dimen/back_button_width"
                android:layout_height="@dimen/back_button_height"
                android:src="@drawable/ic_back"
                android:background="@color/transparent"
                style="@style/audio_back_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_title_padding_left"
                android:text="@string/new_playlist_fragment_title"
                style="@style/activity_top_text"/>

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/new_playlist_playlist_coverage_width_and_height"
            android:layout_height="@dimen/new_playlist_playlist_coverage_width_and_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/new_playlist_playlist_coverage_margin_top"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/transparent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/new_playlist_select_cover"
                android:src="@drawable/ic_new_playlist_add_photo"
                android:background="@drawable/shape_new_playlist_stroke_borders_of_add_photo_area"
                android:scaleType="centerInside"/>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/new_playlist_playlist_title"
            style="@style/new_playlist_playlist_textinput_appearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_playlist_playlist_title_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/new_playlist_playlist_edittext_appearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/new_playlist_playlist_description"
            style="@style/new_playlist_playlist_textinput_appearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_playlist_playlist_description_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/new_playlist_playlist_edittext_appearance"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="0dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/new_playlist_create_playlist_button"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="32dp"
            android:enabled="false"
            android:text="@string/new_playlist_create_playlist_button_text"
            style="@style/new_playlist_create_playlist_button_appearance"/>

    </LinearLayout>

</ScrollView>